# PolymarketBot

./: Polymarket_Bot_SDD.docx  Polymarket_Bot_SDD.txt
polymarket_bot_scaffold/: .env.example  .gitignore  Dockerfile  Makefile  README.md  RESEARCH_GUIDE.md  RESEARCH_OPERATIONS.md  docker-compose.yml  pyproject.toml
polymarket_bot_scaffold/apps/api/: main.py
polymarket_bot_scaffold/apps/api/routes/: config.py  (+6 more)
polymarket_bot_scaffold/apps/worker/: executor.py  paper_trader.py  scanner.py  settlement_engine.py  signal_engine.py
polymarket_bot_scaffold/bot/analytics/: candidate_buckets.py  metrics.py  tradability_persistence.py
polymarket_bot_scaffold/bot/clients/: polymarket_public.py  polymarket_trading.py
polymarket_bot_scaffold/bot/core/: config.py  enums.py  logging.py
polymarket_bot_scaffold/bot/data/: models.py  session.py
polymarket_bot_scaffold/bot/execution/: adapters.py  assessor.py  live_executor.py  paper_trader.py  types.py
polymarket_bot_scaffold/bot/portfolio/: positions.py
polymarket_bot_scaffold/bot/risk/: manager.py
polymarket_bot_scaffold/bot/strategies/: base.py  eth_direction_15m.py  eth_direction_15m_v2.py
polymarket_bot_scaffold/data/: .gitkeep
polymarket_bot_scaffold/results/manifests/: experiment_manifest.json
polymarket_bot_scaffold/results/summaries/: daily_summary.csv
polymarket_bot_scaffold/scripts/: check_120_columns.py  daily_summary.py  experiment_config.py  generate_manifest.py  init_db.py  migrate_120.py  migrate_121.py  migrate_122.py  migrate_123.py  morning_check.py  replay_paper_day.py  run_daily_research.py
(+13 files in other folders)
